--- a/src/content/docs/components/alert.mdx
+++ b/src/content/docs/components/alert.mdx
@@ -6,10 +6,33 @@ prev: components/accordion
 prevLabel: Accordion
 next: components/alert-dialog
 nextLabel: Alert Dialog
+docs: https://kobalte.dev/docs/core/components/alert
+apiReference: https://kobalte.dev/docs/core/components/alert#api-reference
 ---
 
 import AlertCode from "/src/registry/items/ui/alert.tsx?raw"
+import AlertDemoCode from "/src/registry/items/examples/alert-demo.tsx?raw"
+import AlertDemo from "/src/registry/items/examples/alert-demo.tsx"
 
-<CollapsibleCode>
-    <CodeComponent code={AlertCode} lang="tsx" title="~/components/ui/alert.tsx" />
-</CollapsibleCode>
+
+<PreviewTabs demoCode={AlertDemoCode}>
+    <AlertDemo client:only="solid-js" /> 
+</PreviewTabs>
+
+## Installation
+
+<InstallationTabs name="alert" code={AlertCode} />
+
+## Usage
+
+```tsx
+import { Alert, AlertDescription, AlertTitle } from "~/components/ui/alert";
+```
+
+```tsx
+<Alert variant="default | destructive | neutral">
+  <AlertIcon />
+  <AlertTitle>Alert Title</AlertTitle>
+  <AlertDescription>This is an important message for the user.</AlertDescription>
+</Alert>
+```
