--- a/src/content/docs/components/text-field.mdx
+++ b/src/content/docs/components/text-field.mdx
@@ -6,10 +6,50 @@ prev: components/tabs
 prevLabel: Tabs
 next: components/timeline
 nextLabel: Timeline
+docs: https://kobalte.dev/docs/core/components/text-field
+apiReference: https://kobalte.dev/docs/core/components/text-field#api-reference
 ---
 
 import TextFieldCode from "/src/registry/items/ui/text-field.tsx?raw"
+import TextFieldDemoCode from "/src/registry/items/examples/text-field-demo.tsx?raw"
+import TextFieldDemo from "/src/registry/items/examples/text-field-demo.tsx"
+import TextFieldTextAreaCode from "/src/registry/items/examples/text-field-textarea.tsx?raw"
+import TextFieldTextArea from "/src/registry/items/examples/text-field-textarea.tsx"
 
-<CollapsibleCode>
-    <CodeComponent code={TextFieldCode} lang="tsx" title="~/components/ui/text-field.tsx" />
-</CollapsibleCode>
+<PreviewTabs demoCode={TextFieldDemoCode}>
+    <TextFieldDemo client:only="solid-js" /> 
+</PreviewTabs>
+
+## Installation
+
+<InstallationTabs name="text-field" code={TextFieldCode} />
+
+## Usage
+
+```tsx
+import {
+  TextField,
+  TextFieldDescription,
+  TextFieldErrorMessage,
+  TextFieldInput,
+  TextFieldLabel,
+  TextFieldTextArea,
+} from "~/components/ui/text-field";
+```
+
+```tsx
+<TextField>
+  <TextFieldLabel>Name</TextFieldLabel>
+  <TextFieldInput />
+</TextField>
+```
+
+## Examples
+
+### Textarea
+
+Use `TextFieldTextArea` instead of `TextFieldInput` for multiline input fields.
+
+<PreviewTabs demoCode={TextFieldTextAreaCode} class="mt-4">
+    <TextFieldTextArea client:only="solid-js" />    
+</PreviewTabs>
