--- a/src/content/docs/components/toggle.mdx
+++ b/src/content/docs/components/toggle.mdx
@@ -2,14 +2,33 @@
 title: Toggle
 slug: components/toggle
 description: A component that displays a toggle switch.
-prev: components/toast
-prevLabel: Toast
+prev: components/timeline
+prevLabel: Timeline
 next: components/toggle-group
 nextLabel: Toggle Group
+docs: https://kobalte.dev/docs/core/components/toggle-button
+apiReference: https://kobalte.dev/docs/core/components/toggle-button#api-reference
 ---
 
 import ToggleCode from "/src/registry/items/ui/toggle.tsx?raw"
+import ToggleDemoCode from "/src/registry/items/examples/toggle-demo.tsx?raw"
+import ToggleDemo from "/src/registry/items/examples/toggle-demo.tsx"
 
-<CollapsibleCode>
-    <CodeComponent code={ToggleCode} lang="tsx" title="~/components/ui/toggle.tsx" />
-</CollapsibleCode>
+<PreviewTabs demoCode={ToggleDemoCode}>
+    <ToggleDemo client:only="solid-js" /> 
+</PreviewTabs>
+
+## Installation
+
+<InstallationTabs name="toggle" code={ToggleCode} />
+
+## Usage
+
+```tsx
+import { Toggle } from "~/components/ui/toggle";
+```
+
+```tsx
+<Toggle>
+</Toggle>
+```
