--- a/src/content/docs/installation/astro.mdx
+++ b/src/content/docs/installation/astro.mdx
@@ -8,7 +8,7 @@ next: installation/tanstack-router
 nextLabel: TanStack Router
 ---
 
-### Create New Astro App
+## Create New Astro App
 
 Start by creating a new Astro app using `create-astro`:
 
@@ -26,11 +26,11 @@ Then add Tailwind CSS and Solid.js to your Astro app using Astro CLI:
 
 <NpmCommand type="run" command="astro add solid" />
 
-### Add Dependencies
+## Add Dependencies
 
 <NpmCommand type="install" command="class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss" />
 
-### Configure Path Aliases
+## Configure Path Aliases
 
 ```json ins={6-9}
 // tsconfig.json
@@ -48,7 +48,7 @@ Then add Tailwind CSS and Solid.js to your Astro app using Astro CLI:
 
 The `~` alias is a preference. You can use other aliases such as `@` if you want.
 
-### Configure Styles
+## Configure Styles
 
 <CollapsibleCode>
 
@@ -181,7 +181,7 @@ The `~` alias is a preference. You can use other aliases such as `@` if you want
 
 </CollapsibleCode>
 
-### Add `cn` Helper Function
+## Add `cn` Helper Function
 
 ```ts
 // src/lib/utils.ts
@@ -193,7 +193,7 @@ export function cn(...inputs: ClassValue[]) {
 }
 ```
 
-### Create A `components.json` File
+## Create A `components.json` File
 
 ```json
 // components.json
@@ -217,6 +217,6 @@ export function cn(...inputs: ClassValue[]) {
 
 Change the Tailwind CSS file path and aliases according to your project structure.
 
-### That's it!
+## That's it!
 
 Now you can start adding components to your app.
