--- a/src/content/docs/installation/tanstack-router.mdx
+++ b/src/content/docs/installation/tanstack-router.mdx
@@ -8,7 +8,7 @@ next: installation/tanstack-start
 nextLabel: TanStack Start
 ---
 
-### Create New TanStack Router App
+## Create New TanStack Router App
 
 Start by creating a new TanStack Router app using `create-tsrouter-app`. Use `--interactive` and `--framework Solid` parameters to create a new Solid.js project. Select **Solid-UI** template when prompted:
 
@@ -26,13 +26,13 @@ Start by creating a new TanStack Router app using `create-tsrouter-app`. Use `--
 └
 ```
 
-### Update dependencies
+## Update dependencies
 
 <NpmCommand type="uninstall" command="tailwindcss-animate" />
 
 <NpmCommand type="install" command="tw-animate-css lucide-solid @kobalte/tailwindcss" />
 
-### Edit Styles
+## Edit Styles
 
 <CollapsibleCode>
 
@@ -165,7 +165,7 @@ Start by creating a new TanStack Router app using `create-tsrouter-app`. Use `--
 
 </CollapsibleCode>
 
-### Create A `components.json` File
+## Create A `components.json` File
 
 ```json
 // components.json
@@ -189,6 +189,6 @@ Start by creating a new TanStack Router app using `create-tsrouter-app`. Use `--
 
 Change the Tailwind CSS file path and aliases according to your project structure.
 
-### That's it!
+## That's it!
 
 Now you can start adding components to your app.
