--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -8,22 +8,4 @@ nextLabel: Installation
 
 Neobrutalism is a design style that is characterized by its bold, high-contrast colors, raw textures, and a focus on functionality over aesthetics. It often features a mix of industrial materials, such as concrete and metal, with bright, vibrant colors.
 
-This project is a port of [shadcn/ui Neobrutalism Components](https://www.neobrutalism.dev/docs) for [SolidUI](https://www.solid-ui.com/), which is an unofficial port of [shadcn/ui](https://ui.shadcn.com/) to [Solid.js](https://www.solidjs.com/).
-
-- 1
-- 2
-- 3
-
-1. 1
-2. 2
-3. 3
-
-> Neobrutalism is a design style that is characterized by its bold, high-contrast colors, raw textures, and a focus on functionality over aesthetics. It often features a mix of industrial materials, such as concrete and metal, with bright, vibrant colors.
-
----
-
-hello
-
-```ts
-const a = "1";
-```
+This project is heavily inspired by the [Neobrutalism Design System](https://www.neobrutalism.dev/docs) and aims to provide a set of components that follow the principles of Neobrutalism, while also being easy to use and customize. Some of the styles are directly taken from the Neobrutalism Design System, while others are modified for my personal taste.
