--- a/src/content/docs/theming.mdx
+++ b/src/content/docs/theming.mdx
@@ -8,7 +8,7 @@ next: dark-mode
 nextLabel: Dark Mode
 ---
 
-### List Of Variables
+## List Of Variables
 
 ```css
 :root {
@@ -74,7 +74,7 @@ nextLabel: Dark Mode
 }
 ```
 
-### Adding New Colors
+## Adding New Colors
 
 To add new colors, you need to add them to your CSS file.
 
@@ -103,13 +103,13 @@ You can now use the `my-primary` color utility classes in your components.
 <div class="bg-my-primary text-my-primary-foreground">My Primary</div>
 ```
 
-### Other Color Formats
+## Other Color Formats
 
 See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for more information on using colors in Tailwind CSS.
 
-### Other Themes
+## Other Themes
 
-#### Neutral
+### Neutral
 
 <CollapsibleCode>
 ```css
@@ -177,7 +177,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Slate
+### Slate
 
 <CollapsibleCode>
 ```css
@@ -245,7 +245,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Gray
+### Gray
 
 <CollapsibleCode>
 ```css
@@ -313,7 +313,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Zinc
+### Zinc
 
 <CollapsibleCode>
 ```css
@@ -381,7 +381,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Stone
+### Stone
 
 <CollapsibleCode>
 ```css
@@ -449,7 +449,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Blue
+### Blue
 
 <CollapsibleCode>
 ```css
@@ -517,7 +517,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Red
+### Red
 
 <CollapsibleCode>
 ```css
@@ -586,7 +586,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Green
+### Green
 
 <CollapsibleCode>
 ```css
@@ -654,7 +654,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Yellow
+### Yellow
 
 <CollapsibleCode>
 ```css
@@ -722,7 +722,7 @@ See the [Tailwind CSS Documentation](https://tailwindcss.com/docs/colors) for mo
 ```
 </CollapsibleCode>
 
-#### Purple
+### Purple
 
 <CollapsibleCode>
 ```css
