--- a/src/content/docs/components-json.mdx
+++ b/src/content/docs/components-json.mdx
@@ -14,7 +14,7 @@ The `components.json` file holds configuration for your project.
 > 
 > It is only required if you're using the CLI to add components to your project. If you're using the copy and paste method, you don't need this file.
 
-### Schema
+## Schema
 
 ```json {5,11-12}
 // components.json
