--- a/src/content/docs/components/carousel.mdx
+++ b/src/content/docs/components/carousel.mdx
@@ -6,10 +6,98 @@ prev: components/card
 prevLabel: Card
 next: components/checkbox
 nextLabel: Checkbox
+docs: https://www.embla-carousel.com/get-started/solid/
+apiReference: https://www.embla-carousel.com/api/
 ---
 
 import CarouselCode from "/src/registry/items/ui/carousel.tsx?raw"
+import CarouselDemoCode from "/src/registry/items/examples/carousel-demo.tsx?raw"
+import CarouselDemo from "/src/registry/items/examples/carousel-demo.tsx"
+import CarouselSizesCode from "/src/registry/items/examples/carousel-sizes.tsx?raw"
+import CarouselSizesDemo from "/src/registry/items/examples/carousel-sizes.tsx"
+import CarouselOrientationCode from "/src/registry/items/examples/carousel-orientation.tsx?raw"
+import CarouselOrientationDemo from "/src/registry/items/examples/carousel-orientation.tsx"
 
-<CollapsibleCode>
-    <CodeComponent code={CarouselCode} lang="tsx" title="~/components/ui/carousel.tsx" />
-</CollapsibleCode>
+<PreviewTabs demoCode={CarouselDemoCode}>
+    <CarouselDemo client:only="solid-js" /> 
+</PreviewTabs>
+
+## Installation
+
+<InstallationTabs name="carousel" code={CarouselCode} />
+
+## Usage
+
+```tsx
+import {
+  Carousel,
+  CarouselContent,
+  CarouselItem,
+  CarouselNext,
+  CarouselPrevious,
+} from "~/components/ui/carousel";
+```
+
+```tsx
+<Carousel>
+  <CarouselContent>
+    <CarouselItem>...</CarouselItem>
+    <CarouselItem>...</CarouselItem>
+    <CarouselItem>...</CarouselItem>
+  </CarouselContent>
+  <CarouselPrevious />
+  <CarouselNext />
+</CarouselContent>
+```
+
+## examples
+
+### Sizes
+
+To set the size of the items, you can use the `basis` utility class on the `CarouselItem` component.
+
+<PreviewTabs demoCode={CarouselSizesCode}>
+    <CarouselSizesDemo client:only="solid-js" /> 
+</PreviewTabs>
+
+```tsx
+
+// 33% of the carousel width.
+<Carousel>
+  <CarouselContent class="-ml-4">
+    <CarouselItem class="md:basis-1/2 lg:basis-1/3">...</CarouselItem>
+    <CarouselItem class="md:basis-1/2 lg:basis-1/3">...</CarouselItem>
+    <CarouselItem class="md:basis-1/2 lg:basis-1/3">...</CarouselItem>
+  </CarouselContent>
+</Carousel>
+```
+
+```tsx
+
+// 50% on small screens and 33% on larger screens.
+<Carousel>
+  <CarouselContent>
+    <CarouselItem class="md:basis-1/2 lg:basis-1/3">...</CarouselItem>
+    <CarouselItem class="md:basis-1/2 lg:basis-1/3">...</CarouselItem>
+    <CarouselItem class="md:basis-1/2 lg:basis-1/3">...</CarouselItem>
+  </CarouselContent>
+</Carousel>
+```
+
+### Orientation
+
+To change the orientation of the carousel, you can use the `flex-col` utility class on the `CarouselContent` component.
+
+<PreviewTabs demoCode={CarouselOrientationCode}>
+    <CarouselOrientationDemo client:only="solid-js" />
+</PreviewTabs>
+
+```tsx
+<Carousel orientation="vertical | horizontal">
+  <CarouselContent>
+    <CarouselItem>...</CarouselItem>
+    <CarouselItem>...</CarouselItem>
+    <CarouselItem>...</CarouselItem>
+  </CarouselContent>
+</Carousel>
+```
