--- a/src/content/docs/components/radio-group.mdx
+++ b/src/content/docs/components/radio-group.mdx
@@ -6,10 +6,42 @@ prev: components/popover
 prevLabel: Popover
 next: components/resizable
 nextLabel: Resizable
+docs: https://kobalte.dev/docs/core/components/radio-group
+apiReference: https://kobalte.dev/docs/core/components/radio-group#api-reference
 ---
 
 import RadioGroupCode from "/src/registry/items/ui/radio-group.tsx?raw"
+import RadioGroupDemoCode from "/src/registry/items/examples/radio-group-demo.tsx?raw"
+import RadioGroupDemo from "/src/registry/items/examples/radio-group-demo.tsx"
 
-<CollapsibleCode>
-    <CodeComponent code={RadioGroupCode} lang="tsx" title="~/components/ui/radio-group.tsx" />
-</CollapsibleCode>
+<PreviewTabs demoCode={RadioGroupDemoCode}>
+    <RadioGroupDemo client:only="solid-js" /> 
+</PreviewTabs>
+
+## Installation
+
+<InstallationTabs name="radio-group" code={RadioGroupCode} />
+
+## Usage
+
+```tsx
+import {
+  RadioGroup,
+  RadioGroupItem,
+  RadioGroupItemLabel,
+} from "~/components/ui/radio-group";
+```
+
+```tsx
+<RadioGroup>
+  <RadioGroupItem value="option1">
+    <RadioGroupItemLabel>Option 1</RadioGroupItemLabel>
+  </RadioGroupItem>
+  <RadioGroupItem value="option2">
+    <RadioGroupItemLabel>Option 2</RadioGroupItemLabel>
+  </RadioGroupItem>
+  <RadioGroupItem value="option3">
+    <RadioGroupItemLabel>Option 3</RadioGroupItemLabel>
+  </RadioGroupItem>
+</RadioGroup>
+```
