--- a/src/content/docs/installation/solid-start.mdx
+++ b/src/content/docs/installation/solid-start.mdx
@@ -8,7 +8,7 @@ next: installation/astro
 nextLabel: Astro
 ---
 
-### Create New Solid Start App
+## Create New Solid Start App
 
 Start by creating a new Solid Start app using `create-solid`. Select **Solid Start** template when prompted:
 
@@ -34,7 +34,7 @@ cd {project-name}
 
 <NpmCommand type="install" command="" />
 
-### Add Dependencies
+## Add Dependencies
 
 <NpmCommand type="install" command="class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss" />
 
@@ -171,7 +171,7 @@ cd {project-name}
 
 </CollapsibleCode>
 
-### Add `cn` Helper Function
+## Add `cn` Helper Function
 
 ```ts
 // src/lib/utils.ts
@@ -183,7 +183,7 @@ export function cn(...inputs: ClassValue[]) {
 }
 ```
 
-### Create A `components.json` File
+## Create A `components.json` File
 
 ```json
 // components.json
@@ -207,6 +207,6 @@ export function cn(...inputs: ClassValue[]) {
 
 Change the Tailwind CSS file path and aliases according to your project structure.
 
-### That's it!
+## That's it!
 
 Now you can start adding components to your app.
