--- a/src/content/docs/installation/tauri.mdx
+++ b/src/content/docs/installation/tauri.mdx
@@ -8,7 +8,7 @@ next: installation/manual
 nextLabel: Manual
 ---
 
-### Create New Tauri App
+## Create New Tauri App
 
 Start by creating a new Tauri app using `create-tauri-app`. Select **Typescript / Javascript** template when prompted which language to use for your frontend, and then select **Solid** template when prompted which UI template to use:
 
@@ -40,11 +40,11 @@ cd {project-name}
 
 <NpmCommand type="install" command="" />
 
-### Add Tailwind CSS and Dependencies
+## Add Tailwind CSS and Dependencies
 
 <NpmCommand type="install" command="tailwindcss @tailwindcss/vite class-variance-authority clsx tailwind-merge lucide-solid tw-animate-css @kobalte/tailwindcss" />
 
-### Configure Path Aliases
+## Configure Path Aliases
 
 ```json ins={6-9}
 // tsconfig.json
@@ -62,7 +62,7 @@ cd {project-name}
 
 The `~` alias is a preference. You can use other aliases such as `@` if you want.
 
-### Edit `vite.config.ts` File
+## Edit `vite.config.ts` File
 
 Add the following code to the vite.config.ts so your app can resolve paths without error:
 
@@ -83,7 +83,7 @@ export default defineConfig({
 });
 ```
 
-### Configure Styles
+## Configure Styles
 
 <CollapsibleCode>
 
@@ -216,7 +216,7 @@ export default defineConfig({
 
 </CollapsibleCode>
 
-### Add `cn` Helper Function
+## Add `cn` Helper Function
 
 ```ts
 // src/lib/utils.ts
@@ -228,7 +228,7 @@ export function cn(...inputs: ClassValue[]) {
 }
 ```
 
-### Create A `components.json` File
+## Create A `components.json` File
 
 ```json
 // components.json
@@ -252,6 +252,6 @@ export function cn(...inputs: ClassValue[]) {
 
 Change the Tailwind CSS file path and aliases according to your project structure.
 
-### That's it!
+## That's it!
 
 Now you can start adding components to your app.
